...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rgH-Tt-fjI">
                                        <rect key="frame" x="8" y="8" width="45" height="45"/>
                                        <accessibility key="accessibilityConfiguration" identifier="like" label="like"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="45" id="2VO-q9-1Sy"/>
...
                                        <state key="normal" image="big_comment"/>
                                        <connections>
                                            <action selector="comment:" destination="3Uc-7d-MWS" eventType="touchUpInside" id="0dH-ko-EVD"/>
                                        </connections>
                                    </button>
...
                                        <rect key="frame" x="16" y="54" width="288" height="28"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="View people who like this">
                                            <color key="titleColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                        </state>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                                        <state key="normal" title="SIGN IN">
                                            <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                            <constraint firstAttribute="height" constant="40" id="Ylc-HG-3WS"/>
                                        </constraints>
                                        <state key="normal" image="send"/>
                                        <connections>
                                            <action selector="send_Comment:" destination="rTF-Ma-rfV" eventType="touchUpInside" id="Kgl-Ob-YRt"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="Create Post" id="djK-fR-5nn">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="E6y-2i-BVz">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
...
                        <viewLayoutGuide key="safeArea" id="IlA-Nd-DA2"/>
                    </view>
                    <navigationItem key="navigationItem" title="Tagged" id="ueI-c6-rO3">
                        <barButtonItem key="leftBarButtonItem" image="back" id="2Jr-fe-lae">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                        <viewLayoutGuide key="safeArea" id="9f9-Og-fMY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Comments" leftItemsSupplementBackButton="YES" id="Dzr-Iu-5mN">
                        <barButtonItem key="backBarButtonItem" title="Back" id="1yF-Zu-gQe"/>
                        <barButtonItem key="leftBarButtonItem" image="back" id="HgA-SS-7mD">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                        <outlet property="backBtn" destination="HgA-SS-7mD" id="IOe-f5-NNK"/>
                        <outlet property="comentTextFeild" destination="VGw-wL-aa1" id="tVV-sh-bD1"/>
                        <outlet property="commentLabel" destination="vYL-YX-fML" id="6pj-e5-YPm"/>
                        <outlet property="goToPost" destination="CM2-zH-qki" id="QUy-vH-Xzj"/>
                        <outlet property="loaderView" destination="OcZ-wc-hm7" id="gFf-RI-PXN"/>
...
                        <outlet property="sendBtn" destination="dQL-I8-GIf" id="mUr-4g-I6k"/>
                        <outlet property="userImage" destination="dX4-We-GBG" id="OKA-pL-zRI"/>
                        <outlet property="userName" destination="Hr0-2c-pFR" id="whk-Ff-FN2"/>
                        <outlet property="writeText" destination="40R-Dn-6t8" id="A7d-j6-rv1"/>
                    </connections>
...
