...
            vc.index = self.index
            vc.photo = self.photo[index]
            
        }else if segue.identifier == "infoImage"{
            let nav = segue.destination as! UINavigationController
            let vc : ImageInfoViewController = nav.topViewController as! ImageInfoViewController
            vc.title = "Info"
            vc.photo = self.photo[self.index]
            vc.indexOfPhoto = self.index
        }
        
    }
}
...
        navigationControlr.modalPresentationStyle = .fullScreen
        self.present(navigationControlr, animated: true, completion: nil)
        
    }
    
    @IBAction func share(_ sender: UIButton) {
        let shareAlert = UIAlertController(title: "Share Post", message: "Select the social network you wish to share post on.", preferredStyle: .actionSheet)
        
        if NetworkController.front_user_id != "0"{
            shareAlert.addAction(UIAlertAction(title: "Share on Outdoors360", style: .default , handler: {_ in
                let alert = UIAlertController(title: "Share", message: "Share Post on Outdoors360", preferredStyle: .alert)
                alert.addAction(UIAlertAction(title: "Share Now", style: .default, handler: { _ in
                    let txtFeild = alert.textFields![0] as UITextField
...
