...
    var currentIndex : Int = -1
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
//        self.nav = "People who lik this"
        self.title = "People who like this"
        if self.content_type == "photo"{
            self.navigationItem.leftBarButtonItems = [backBtn]
        }else{
            self.navigationItem.leftBarButtonItem = nil
        }
        self.PeopleLiked(type : content_type)
...
