...
extension UIViewController : Reusable{
    
    ///Alert  with Warning or Error just with single Button
    
    func presentError( massageTilte msg : String){
        let alertController = UIAlertController(title: msg, message: nil, preferredStyle: .alert)
        let OKAction = UIAlertAction(title: "OK", style: .default)
        alertController.addAction(OKAction)
        self.present(alertController, animated: true, completion: nil)
    }
    
    
    ///Setting The Image for navigation bar
...
